Changed title tag to "Nymero"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 	<head>
 		<meta charset="utf-8">
-		<title>MMS :: OOM</title>
+		<title>Nymero</title>
 
 		<style>
 			html, body {
